Fix list item text not wrapping

--- a/src/styles/ListItem.css
+++ b/src/styles/ListItem.css
@@ -21,6 +21,13 @@
     margin: auto auto auto 0;
 }
 
+.item-details p{
+    font-size: 16px;
+    min-width: 0; /*fix flex child not wrapping*/
+    overflow-wrap: break-word;
+    text-wrap: wrap;
+}
+
 .item-details-column{
     flex-direction: column;
     gap: 10px;
@@ -30,10 +37,6 @@
     flex-direction: row;
     align-items: center;
     gap: 10px;
-}
-
-.item-details-column>p{
-    font-size: 16px;
 }
 
 .item-icon{
